# FurinaOCR

./: .clippy.toml  .editorconfig  .gitattributes  .gitignore  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  codecov.yml  codesign.sh  deny.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  enhanced-ci.yml  test.yml
application/: Cargo.toml  build.rs
application/src/: main.rs
assets/: app.entitlements
benches/: string_optimization_bench.rs
derive/: Cargo.toml
derive/src/: lib.rs
derive/src/window_info/: derive_macro.rs  mod.rs  nested_attributes.rs
docs/: TESTING.md
examples/: new_features_demo.rs
furina_core/: Cargo.toml
furina_core/src/: lib.rs
furina_core/src/capture/: capturer.rs  generic_capturer.rs  libwayshot_capturer.rs  mod.rs  screenshots_capturer.rs  stream_capturer.rs  winapi_capturer.rs  windows_capturer.rs
furina_core/src/common/: cancel.rs  color.rs
furina_core/src/error_recovery/: mod.rs
furina_core/src/export/: asset_emitter.rs  export_item.rs  export_statistics.rs  exporter.rs  mod.rs
furina_core/src/game_info/: game_info.rs  game_info_builder.rs  mod.rs  resolution_family.rs  ui.rs
furina_core/src/game_info/os/: linux.rs  macos.rs  mod.rs  winodws.rs
furina_core/src/genshin_scanning/: artifact_scanner.rs
furina_core/src/ocr/: mod.rs
furina_core/src/ocr/ocr_model/: mod.rs  ocr_model.rs  preprocess.rs
furina_core/src/positioning/: mod.rs  pos.rs  rect.rs  scalable.rs  shape.rs  size.rs
furina_core/src/system_control/: mod.rs
furina_core/src/system_control/linux/: linux_control.rs
furina_core/src/system_control/macos/: macos_control.rs
furina_core/src/system_control/windows/: windows_control.rs
furina_core/src/testing/: fuzz_testing.rs  mod.rs
furina_core/src/utils/: macos.rs  mod.rs  string_optimizer.rs  windows.rs
furina_core/src/window_info/: from_window_info_repository.rs  load_window_info.rs  mod.rs  window_info_repository.rs  window_info_type.rs
genshin/: Cargo.toml
genshin/src/: lib.rs
genshin/src/application/: artifact_scanner.rs  mod.rs
genshin/src/artifact/: artifact.rs  mod.rs
genshin/src/character/: character_names.rs  mod.rs
genshin/src/export/artifact/: csv.rs  exporter.rs  good.rs  mingyu_lab.rs  mod.rs  mona_uranai.rs
genshin/src/scanner/: mod.rs
genshin/src/scanner/artifact_scanner/: artifact_scanner.rs  artifact_scanner_config.rs  artifact_scanner_window_info.rs  artifact_scanner_worker.rs  error.rs  mod.rs  performance_optimizations.rs  scan_result.rs
genshin/src/scanner/artifact_scanner/models/: index_2_word.json  model_training.onnx
genshin/src/scanner_controller/repository_layout/: config.rs  controller.rs  mod.rs  window_info.rs
genshin/window_info/: windows1600x900.json  windows1920x1080.json  windows2560x1440.json
scripts/: install-hooks.ps1  quality-check.ps1
tests/: Cargo.toml
tests/src/: artifact_stat_name_tests.rs  error_recovery_tests.rs  integration_tests_module.rs  lib.rs  mod.rs  simple_test.rs  string_optimization_tests.rs
