[workspace]
members = [
    "furina_core",
    "derive",
    "application",
    "genshin",
]
resolver = "2"

[profile.release]
lto = true
panic = "abort"
strip = true

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["FurinaQvQ"]
license = "GPL-2.0-or-later"
repository = "https://github.com/FurinaQvQ/FurinaOCR"
description = "专注于原神圣遗物扫描的高效工具"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
env_logger = "0.10"
