[workspace]
members = ["furina_core", "genshin", "tests", "application", "derive"]
exclude = ["integration_tests"]
resolver = "2"

[workspace.package]
version = "0.56.2"
edition = "2021"
authors = ["FurinaQvQ"]
description = "原神圣遗物智能扫描工具 - 基于Rust实现的高性能OCR识别系统"
license = "GPL-2.0-or-later"
repository = "https://github.com/FurinaQvQ/FurinaOCR"
keywords = ["genshin-impact", "ocr", "artifact-scanner", "furina", "rust"]
homepage = "https://github.com/FurinaQvQ/FurinaOCR"

[workspace.dependencies]
image = "0.24"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
regex = "1.5"
base64 = "0.21"
sha2 = "0.10"
winapi = { version = "0.3", features = ["windef", "winuser", "wingdi"] }
opencv = { version = "0.91.0", default-features = false, features = ["opencv-4", "contrib"] }
pyo3 = { version = "0.20", features = ["auto-initialize"] }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
lazy_static = "1.4"
uuid = { version = "1.0", features = ["v4"] }
rand = { version = "0.8", features = ["std_rng"] }
criterion = { version = "0.5", features = ["html_reports"] }

# 致敬原项目贡献者
# Original project contributors: wormtql, GZTime, YCR160
# Based on: https://github.com/wormtql/yas

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
overflow-checks = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
