[package]
name = "FurinaOCR"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
homepage.workspace = true

[dependencies]
furina_core = { path = "../furina_core" }
derive = { path = "../derive" }
genshin = { path = "../genshin" }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
env_logger = "0.10"

[build-dependencies]
winres = "0.1"

# [profile.release]
# lto = true
# panic = "abort"
# strip = true
