[package]
name = "genshin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Genshin Impact specific implementations for FurinaOCR - based on yas_core"
keywords.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
furina_core = { path = "../furina_core", package = "furina_core" }
derive = { path = "../derive" }
anyhow = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive", "cargo"] }
image = "0.24"
regex = "1.5"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
lazy_static = "1.4"
serde_yaml = "0.9"
csv = "1.3.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59.0", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
]}

# [profile.release]
# lto = true
# panic = "abort"
# strip = true


