[package]
name = "tests"
version = "0.1.0"
edition = "2021"
license.workspace = true

[lib]
name = "tests"
path = "src/mod.rs"

[dependencies]
furina_core = { path = "../furina_core" }
genshin = { path = "../genshin" }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
regex = "1.5"
rand = { version = "0.8", features = ["std_rng"] }
lazy_static = "1.4"

[dev-dependencies]
env_logger = "0.10" 